# kinova-kortex

./: .gitignore  CMakeLists.txt  LOCAL_BUILD_GUIDE.md  README.md  SETUP_COMPLETE.md  build-local.sh  build.sh  build_protobuf.sh  guide_bridging_libstd_libc_ABI_QNX.md  guide_build_master_agent2.md  guide_build_protobuf_qnx.md  guide_kortex_static_linking_protobuf.md  install_protobuf.sh  kinova_dependency.md  summary.md
dependencies/kortex_api/: conanmanifest.txt
dependencies/kortex_api/include/server/: ITransportServer.h  KeApiRouter.h  KeApiService.h  TransportServerKeos.h
dependencies/kortex_api/include/server_stubs/: BaseCyclicServerRpc.h  BaseServerRpc.h  DeviceManagerServerRpc.h  GripperCyclicServerRpc.h  InterconnectCyclicServerRpc.h  TestServerRpc.h
dependencies/kortex_api/unitTest/: CppKinovaApiUnitTest
examples/: summary.md
examples/build-gcc---release/: CMakeCache.txt
examples/build-gcc-release/: CMakeCache.txt  Makefile  cmake_install.cmake  conanbuildinfo.cmake  conanbuildinfo.txt
guides/: guide_build_kinova.md  guide_build_master.md  guide_build_master_agent2.md
src/: actuator_low_level_velocity_control.cpp  actuator_low_level_velocity_control.use  common.mk
src/nto/aarch64/o-le/: actuator_low_level_velocity_control.dep  utilities.dep
src/nto/x86_64/o/: actuator_low_level_velocity_control.dep  utilities.dep
